--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html><html lang="fa">
 <head>
   <meta charset="UTF-8">
@@ -33,18 +32,18 @@
       font-family: sans-serif;
     }
     section {
-      margin: 1rem;
+      margin: 1rem auto;
+      max-width: 100vw;
     }
     .swiper {
       width: 100%;
-      height: 50vw;
+      height: auto;
       max-height: 300px;
-      margin: auto;
     }
     .swiper-slide img {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+      height: auto;
+      object-fit: contain;
       border-radius: 12px;
     }
     .category {
@@ -59,10 +58,16 @@
       font-family: 'Poppins', sans-serif;
     }
     .category .swiper {
-      height: 50vw;
-      max-height: 250px;
+      width: 100%;
+      height: auto;
     }
-    .about {
+    .category .swiper-slide img {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+      border-radius: 12px;
+    }
+    .about, .contact {
       background-color: #eae3dc;
       padding: 2rem;
       margin: 2rem auto;
@@ -71,27 +76,11 @@
       font-size: 1rem;
       line-height: 1.8;
     }
-    .about h2 {
+    .about h2, .contact h2 {
       font-size: 1.5rem;
       font-weight: bold;
       margin-bottom: 1rem;
       text-align: center;
-    }
-    .contact {
-      background-color: #f3ede7;
-      padding: 2rem;
-      margin: 2rem auto;
-      max-width: 95%;
-      border-radius: 12px;
-      text-align: center;
-    }
-    .contact h2 {
-      font-size: 1.4rem;
-      margin-bottom: 1rem;
-    }
-    .contact p {
-      margin: 0.5rem 0;
-      font-size: 1rem;
     }
     .social {
       display: flex;
@@ -120,12 +109,6 @@
     @media (max-width: 480px) {
       h1 {
         font-size: 1rem;
-      }
-      .category .swiper {
-        height: 55vw;
-      }
-      .swiper-slide img {
-        border-radius: 8px;
       }
       .category h2 {
         font-size: 1.2rem;
@@ -188,10 +171,10 @@
     <p>اینستاگرام: <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">@rozita_shams_studio</a></p>
   </div>  <div class="social">
     <a href="https://wa.me/989121839844" target="_blank">
-      <img src="whatsapp-icon.png" alt="آیکون واتساپ">واتساپ
+      <img src="https://img.icons8.com/ios-filled/50/000000/whatsapp.png" alt="آیکون واتساپ">واتساپ
     </a>
     <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">
-      <img src="instagram-icon.png" alt="آیکون اینستاگرام">اینستاگرام
+      <img src="https://img.icons8.com/ios-filled/50/000000/instagram-new.png" alt="آیکون اینستاگرام">اینستاگرام
     </a>
   </div>  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>  <script>
     const swiperOptions = {
@@ -200,6 +183,8 @@
         delay: 2500,
         disableOnInteraction: false,
       },
+      slidesPerView: 1,
+      spaceBetween: 10,
     };
     new Swiper('.main-swiper', swiperOptions);
     new Swiper('.perfume-swiper', swiperOptions);
