--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+      
 <!DOCTYPE html><html lang="fa">
 <head>
   <meta charset="UTF-8">
@@ -32,18 +34,17 @@
       font-family: sans-serif;
     }
     section {
-      margin: 1rem auto;
+      margin: 2rem auto 1rem;
       max-width: 100vw;
     }
     .swiper {
       width: 100%;
-      height: auto;
-      max-height: 300px;
+      height: 250px;
     }
     .swiper-slide img {
       width: 100%;
-      height: auto;
-      object-fit: contain;
+      height: 100%;
+      object-fit: cover;
       border-radius: 12px;
     }
     .category {
@@ -59,11 +60,11 @@
     }
     .category .swiper {
       width: 100%;
-      height: auto;
+      height: 220px;
     }
     .category .swiper-slide img {
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: contain;
       border-radius: 12px;
     }
@@ -131,6 +132,7 @@
         <div class="swiper-slide"><img src="slide2.jpg" alt="نمونه عکاسی 2"></div>
         <div class="swiper-slide"><img src="slide3.jpg" alt="نمونه عکاسی 3"></div>
       </div>
+      <div class="swiper-pagination"></div>
     </div>
   </section>  <div class="category">
     <h2>Perfume</h2>
@@ -180,12 +182,17 @@
     const swiperOptions = {
       loop: true,
       autoplay: {
-        delay: 2500,
+        delay: 3000,
         disableOnInteraction: false,
+      },
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
       },
       slidesPerView: 1,
       spaceBetween: 10,
     };
+
     new Swiper('.main-swiper', swiperOptions);
     new Swiper('.perfume-swiper', swiperOptions);
     new Swiper('.cosmetics-swiper', swiperOptions);
