--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
-      
-<!DOCTYPE html><html lang="fa">
+<!DOCTYPE html>
+<html lang="fa">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -125,16 +125,21 @@
   <header>
     <img src="Logo.jpg" alt="لوگوی استدیو Rozita Shams">
     <h1>استدیو تخصصی عکاسی تبلیغاتی محصولات آرایشی و بهداشتی</h1>
-  </header>  <section>
+  </header>
+
+  <section>
     <div class="swiper main-swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="slide1.jpg" alt="نمونه عکاسی 1"></div>
         <div class="swiper-slide"><img src="slide2.jpg" alt="نمونه عکاسی 2"></div>
         <div class="swiper-slide"><img src="slide3.jpg" alt="نمونه عکاسی 3"></div>
+        <div class="swiper-slide"><img src="slide4.jpg" alt="نمونه عکاسی 4"></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
-  </section>  <div class="category">
+  </section>
+
+  <div class="category">
     <h2>Perfume</h2>
     <div class="swiper perfume-swiper">
       <div class="swiper-wrapper">
@@ -142,7 +147,9 @@
         <div class="swiper-slide"><img src="perfumeee.jpg" alt="عطر شماره ۲"></div>
       </div>
     </div>
-  </div>  <div class="category">
+  </div>
+
+  <div class="category">
     <h2>Cosmetics</h2>
     <div class="swiper cosmetics-swiper">
       <div class="swiper-wrapper">
@@ -153,7 +160,9 @@
         <div class="swiper-slide"><img src="mascara.jpg" alt="ریمل"></div>
       </div>
     </div>
-  </div>  <div class="category">
+  </div>
+
+  <div class="category">
     <h2>Health Care</h2>
     <div class="swiper health-swiper">
       <div class="swiper-wrapper">
@@ -163,39 +172,33 @@
         <div class="swiper-slide"><img src="foam.jpg" alt="فوم شستشوی صورت"></div>
       </div>
     </div>
-  </div>  <div class="about">
+  </div>
+
+  <div class="about">
     <h2>درباره من</h2>
     <p>من رزیتا شمس هستم که تمام دوره‌های عکاسی و نورپردازی حرفه‌ای را گذرانده‌ام و با برندهای مختلفی همکاری کرده‌ام. کارم را از سال ۱۴۰۰ آغاز کرده‌ام و عاشق عکاسی هستم. با نورپردازی، به محصولات روح می‌بخشم و زیبایی واقعی آن‌ها را به تصویر می‌کشم.</p>
-  </div>  <div class="contact">
+  </div>
+
+  <div class="contact">
     <h2>تماس با من</h2>
     <p>ایمیل: <a href="mailto:rozitashams1@gmail.com">rozitashams1@gmail.com</a></p>
     <p>واتساپ: <a href="https://wa.me/989121839844">09121839844</a></p>
     <p>اینستاگرام: <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">@rozita_shams_studio</a></p>
-  </div>  <div class="social">
+  </div>
+
+  <div class="social">
     <a href="https://wa.me/989121839844" target="_blank">
       <img src="https://img.icons8.com/ios-filled/50/000000/whatsapp.png" alt="آیکون واتساپ">واتساپ
     </a>
     <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">
       <img src="https://img.icons8.com/ios-filled/50/000000/instagram-new.png" alt="آیکون اینستاگرام">اینستاگرام
     </a>
-  </div>  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>  <script>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script>
     const swiperOptions = {
       loop: true,
       autoplay: {
         delay: 3000,
-        disableOnInteraction: false,
-      },
-      pagination: {
-        el: '.swiper-pagination',
-        clickable: true,
-      },
-      slidesPerView: 1,
-      spaceBetween: 10,
-    };
-
-    new Swiper('.main-swiper', swiperOptions);
-    new Swiper('.perfume-swiper', swiperOptions);
-    new Swiper('.cosmetics-swiper', swiperOptions);
-    new Swiper('.health-swiper', swiperOptions);
-  </script></body>
-</html>
+        disableOn
