--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
     .swiper {
       width: 100%;
       height: 250px;
+      margin-top: 1rem;
     }
     .swiper-slide img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain; /* فقط این خط تغییر کرده */
       border-radius: 12px;
     }
     .category {
