--- a/index.html
+++ b/index.html
@@ -1,33 +1,13 @@
 
-<!DOCTYPE html>
-<html lang="fa">
+<!DOCTYPE html><html lang="fa">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="استدیو تخصصی عکاسی تبلیغاتی محصولات آرایشی و بهداشتی توسط رزیتا شمس. نمونه‌کارهای حرفه‌ای عکاسی از عطر، لوازم آرایش و محصولات مراقبت پوست و مو.">
-  <meta name="keywords" content="عکاسی تبلیغاتی, عکاسی محصولات, عکاسی لوازم آرایشی, استدیو عکاسی, Rozita Shams, عکاسی حرفه‌ای">
+  <meta name="description" content="استدیو تخصصی عکاسی تبلیغاتی محصولات آرایشی و بهداشتی - عکاسی حرفه‌ای از عطر، لوازم آرایش و محصولات مراقبت پوست و مو">
+  <meta name="keywords" content="عکاسی تبلیغاتی, عکاسی محصولات, عکاسی لوازم آرایشی, استدیو عکاسی, Rozita Shams">
   <meta name="author" content="Rozita Shams Studio">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <title>استدیو تخصصی عکاسی تبلیغاتی | Rozita Shams</title>
-
-  <!-- Schema.org برای کسب‌وکار محلی -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "ProfessionalService",
-    "name": "Rozita Shams Studio",
-    "image": "https://rozitashams.github.io/Logo.jpg",
-    "description": "استدیو تخصصی عکاسی تبلیغاتی محصولات آرایشی و بهداشتی",
-    "address": {
-      "@type": "PostalAddress",
-      "addressCountry": "IR"
-    },
-    "telephone": "+989121839844",
-    "email": "rozitashams1@gmail.com",
-    "url": "https://rozitashams.github.io"
-  }
-  </script>
-
+  <title>استدیو تخصصی عکاسی تبلیغاتی محصولات آرایشی و بهداشتی</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
@@ -64,7 +44,7 @@
     .swiper-slide img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: contain; /* فقط این خط تغییر کرده */
       border-radius: 12px;
     }
     .category {
@@ -145,57 +125,76 @@
   <header>
     <img src="Logo.jpg" alt="لوگوی استدیو Rozita Shams">
     <h1>استدیو تخصصی عکاسی تبلیغاتی محصولات آرایشی و بهداشتی</h1>
-  </header>
-
-  <section>
+  </header>  <section>
     <div class="swiper main-swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="advertising-perfume-photography.jpg" alt="عکاسی تبلیغاتی از عطر برند لوکس"></div>
-        <div class="swiper-slide"><img src="advertising-cosmetics.jpg" alt="عکاسی تبلیغاتی از لوازم آرایشی برند"></div>
-        <div class="swiper-slide"><img src="health-care-photography.jpg" alt="عکاسی محصولات مراقبت پوست و مو"></div>
-        <div class="swiper-slide"><img src="luxury-product-photography.jpg" alt="عکاسی حرفه‌ای از محصولات لوکس"></div>
+        <div class="swiper-slide"><img src="slide1.jpg" alt="نمونه عکاسی 1"></div>
+        <div class="swiper-slide"><img src="slide2.jpg" alt="نمونه عکاسی 2"></div>
+        <div class="swiper-slide"><img src="slide3.jpg" alt="نمونه عکاسی 3"></div>
+        <div class="swiper-slide"><img src="slide4.jpg" alt="نمونه عکاسی 4"></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
-  </section>
-
-  <div class="category">
+  </section>  <div class="category">
     <h2>Perfume</h2>
-    <p style="max-width:90%;margin:0 auto;line-height:1.8">در این بخش نمونه‌کارهای حرفه‌ای عکاسی از عطرهای برند را مشاهده می‌کنید. هدف ما نشان دادن حس لوکس و خاص بودن محصول است. عکاسی عطر نیاز به نورپردازی دقیق و بازتاب‌سنجی دارد تا زیبایی شیشه و مایع آن به‌درستی نمایش داده شود.</p>
     <div class="swiper perfume-swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="perfume1.jpg" alt="عطر شماره ۱"></div>
-        <div class="swiper-slide"><img src="perfume2.jpg" alt="عطر شماره ۲"></div>
+        <div class="swiper-slide"><img src="perfume6.jpg" alt="عطر شماره ۱"></div>
+        <div class="swiper-slide"><img src="perfumeee.jpg" alt="عطر شماره ۲"></div>
       </div>
     </div>
-  </div>
-
-  <div class="category">
+  </div>  <div class="category">
     <h2>Cosmetics</h2>
-    <p style="max-width:90%;margin:0 auto;line-height:1.8">لوازم آرایشی برای جذب مخاطب نیاز به نمایش رنگ، بافت و جزئیات ظاهری دارند. در استدیو ما با نورپردازی حرفه‌ای و بک‌گراندهای هماهنگ، زیبایی واقعی محصولات آرایشی را به تصویر می‌کشیم.</p>
     <div class="swiper cosmetics-swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="green-nail-polish.jpg" alt="لاک سبز"></div>
-        <div class="swiper-slide"><img src="nail-polish.jpg" alt="لاک ناخن"></div>
-        <div class="swiper-slide"><img src="lip-gloss.jpg" alt="برق لب جدید"></div>
+        <div class="swiper-slide"><img src="green2.jpg" alt="لاک سبز"></div>
+        <div class="swiper-slide"><img src="nailpolish.jpg" alt="لاک ناخن"></div>
+        <div class="swiper-slide"><img src="new.roj.jpg" alt="برق لب جدید"></div>
+        <div class="swiper-slide"><img src="20240801_120509.jpg" alt="برق لب"></div>
         <div class="swiper-slide"><img src="mascara.jpg" alt="ریمل"></div>
       </div>
     </div>
-  </div>
-
-  <div class="category">
+  </div>  <div class="category">
     <h2>Health Care</h2>
-    <p style="max-width:90%;margin:0 auto;line-height:1.8">محصولات مراقبت پوست و مو نیاز به فضایی آرام، تمیز و قابل اعتماد دارند. هدف ما این است که با استفاده از رنگ‌های طبیعی و چینش حرفه‌ای، حس بهداشتی و کیفیت را به کاربر منتقل کنیم.</p>
     <div class="swiper health-swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="sunscreen.jpg" alt="ضد آفتاب"></div>
-        <div class="swiper-slide"><img src="toner.jpg" alt="تونر پوست"></div>
-        <div class="swiper-slide"><img src="hair-conditioner.jpg" alt="نرم کننده مو"></div>
-        <div class="swiper-slide"><img src="cleansing-foam.jpg" alt="فوم شستشوی صورت"></div>
+        <div class="swiper-slide"><img src="sun.jpg" alt="ضد آفتاب"></div>
+        <div class="swiper-slide"><img src="ton.jpg" alt="تونر پوست"></div>
+        <div class="swiper-slide"><img src="20240204_165135.jpg" alt="نرم کننده مو"></div>
+        <div class="swiper-slide"><img src="foam.jpg" alt="فوم شستشوی صورت"></div>
       </div>
     </div>
-  </div>
-
-  <div class="about">
+  </div>  <div class="about">
     <h2>درباره من</h2>
-    <p>من رزیتا شمس هستم که تمام
+    <p>من رزیتا شمس هستم که تمام دوره‌های عکاسی و نورپردازی حرفه‌ای را گذرانده‌ام و با برندهای مختلفی همکاری کرده‌ام. کارم را از سال ۱۴۰۰ آغاز کرده‌ام و عاشق عکاسی هستم. با نورپردازی، به محصولات روح می‌بخشم و زیبایی واقعی آن‌ها را به تصویر می‌کشم.</p>
+  </div>  <div class="contact">
+    <h2>تماس با من</h2>
+    <p>ایمیل: <a href="mailto:rozitashams1@gmail.com">rozitashams1@gmail.com</a></p>
+    <p>واتساپ: <a href="https://wa.me/989121839844">09121839844</a></p>
+    <p>اینستاگرام: <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">@rozita_shams_studio</a></p>
+  </div>  <div class="social">
+    <a href="https://wa.me/989121839844" target="_blank">
+      <img src="https://img.icons8.com/ios-filled/50/000000/whatsapp.png" alt="آیکون واتساپ">واتساپ
+    </a>
+    <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">
+      <img src="https://img.icons8.com/ios-filled/50/000000/instagram-new.png" alt="آیکون اینستاگرام">اینستاگرام
+    </a>
+  </div>  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>  <script>
+    const swiperOptions = {
+      loop: true,
+      autoplay: {
+        delay: 3000,
+        disableOnInteraction: false
+      },
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+    };
+
+    new Swiper('.main-swiper', swiperOptions);
+    new Swiper('.perfume-swiper', swiperOptions);
+    new Swiper('.cosmetics-swiper', swiperOptions);
+    new Swiper('.health-swiper', swiperOptions);
+  </script></body>
+</html>
