--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- نسخه اصلاح‌شده سایت شما -->
+<!-- نسخه اصلاح‌شده سایت شما با اضافه شدن دو نمونه توضیح -->
 <!DOCTYPE html>
 <html lang="fa">
 <head>
@@ -137,7 +137,7 @@
         <div class="swiper-slide"><img src="slide2.jpg" alt="نمونه عکاسی 2"></div>
         <div class="swiper-slide"><img src="slide3.jpg" alt="نمونه عکاسی 3"></div>
         <div class="swiper-slide"><img src="slide4.jpg" alt="نمونه عکاسی 4"></div>
-        <div class="swiper-slide"><img src="slide5.jpg" alt="نمونه عکاسی 5"></div> <!-- اضافه شده -->
+        <div class="swiper-slide"><img src="slide5.jpg" alt="نمونه عکاسی 5"></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
@@ -174,7 +174,7 @@
         <div class="swiper-slide"><img src="ton.jpg" alt="تونر پوست"></div>
         <div class="swiper-slide"><img src="20240204_165135.jpg" alt="نرم کننده مو"></div>
         <div class="swiper-slide"><img src="foam.jpg" alt="فوم شستشوی صورت"></div>
-        <div class="swiper-slide"><img src="serum-1.jpg" alt="سرم ویتامین سی"></div> <!-- اضافه شده -->
+        <div class="swiper-slide"><img src="serum-1.jpg" alt="سرم ویتامین سی"></div>
       </div>
     </div>
   </div>
@@ -200,12 +200,34 @@
     </a>
   </div>
 
+  <!-- توضیح نمونه عطر جدید -->
+  <div class="about" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 1rem;">
+    <div style="flex: 1; min-width: 250px;">
+      <h2>عطر لوکس و مدرن</h2>
+      <p>در این تصویر، از تکنیک نورپردازی متمرکز برای برجسته‌سازی بطری عطر استفاده شده است. پس‌زمینه‌ی ملایم و انعکاس ظریف روی سطح، حس لوکس بودن را منتقل می‌کند. این نوع عکاسی برای محصولات عطری، حس خاص و منحصر به‌فردی به برند می‌بخشد.</p>
+    </div>
+    <div style="flex: 1; min-width: 250px; text-align: center;">
+      <img src="Perfume.jpg" alt="عطر لوکس" style="max-width: 100%; border-radius: 12px;">
+    </div>
+  </div>
+
+  <!-- توضیح نمونه سرم ویتامین سی -->
+  <div class="about" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 1rem;">
+    <div style="flex: 1; min-width: 250px;">
+      <h2>سرم ویتامین C - روشن‌کننده و ضد لک</h2>
+      <p>در این عکس، سرم ویتامین C در مرکز توجه قرار دارد. با استفاده از نور نرم و پس‌زمینه‌ی روشن، حس تمیزی و سلامت پوست القا شده است. این نوع ترکیب نوری به خوبی مفهوم شفافیت و تأثیرگذاری محصول روی لک‌های پوستی را منتقل می‌کند و برای برندهای مراقبت از پوست بسیار مناسب است.</p>
+    </div>
+    <div style="flex: 1; min-width: 250px; text-align: center;">
+      <img src="serum-1.jpg" alt="سرم ویتامین سی" style="max-width: 100%; border-radius: 12px;">
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     const swiperOptions = {
       loop: true,
       autoplay: {
-        delay: 6000, // آهسته‌تر شد (۶ ثانیه)
+        delay: 6000,
         disableOnInteraction: false
       },
       pagination: {
